--- a/catalog-item.html
+++ b/catalog-item.html
@@ -134,54 +134,10 @@
             </section>
             <section class="item-section">
                 <div class="wrapper item-section__wrapper">
-                    <div class="item-section__row">
+
+                    <div class="item-section__content">
                         <img src="./assets/img/item-img.jpg" alt="Грунт-эмаль полиуретановая «KOVALI®» 2К"
                             class="item-section__content-img">
-                        <div class="item-section__info">
-                            <h1 class="item-section__info-heading">
-                                Грунт-эмаль полиуретановая «KOVALI®» 2К
-                            </h1>
-                            <p class="item-section__price">
-                                16 300 ₽
-                            </p>
-                            <div class="item-section__info-item">
-                                <h2 class="item-section__info-item-heading">
-                                    Блеск
-                                </h2>
-                                <div class="item-section__info-item-list">
-                                    <a href="#" class="item-section__info-item-list-link active">
-                                        Матовая
-                                    </a>
-                                    <a href="#" class="item-section__info-item-list-link">
-                                        Глянцевая
-                                    </a>
-                                    <a href="#" class="item-section__info-item-list-link">
-                                        Полуглянцевая
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="item-section__info-item">
-                                <h2 class="item-section__info-item-heading">
-                                    Фасовка
-                                </h2>
-                                <div class="item-section__info-item-list">
-                                    <a href="#" class="item-section__info-item-list-link active">
-                                        2,4 кг
-                                    </a>
-                                    <a href="#" class="item-section__info-item-list-link">
-                                        8 кг
-                                    </a>
-                                    <a href="#" class="item-section__info-item-list-link">
-                                        20 кг
-                                    </a>
-                                </div>
-                            </div>
-                            <a href="#" class="item-section__info-color-link">
-                                +200 цветов RAL
-                            </a>
-                        </div>
-                    </div>
-                    <div class="item-section__content">
                         <div class="item-section__text-content">
                             <h2>
                                 описание
@@ -261,6 +217,50 @@
                                     запрещено)</li>
                             </ol>
                         </div>
+                    </div>
+                    <div class="item-section__info">
+                        <img src="./assets/img/item-img.jpg" alt="" class="item-section__info-img">
+                        <h1 class="item-section__info-heading">
+                            Грунт-эмаль полиуретановая «KOVALI®» 2К
+                        </h1>
+                        <p class="item-section__price">
+                            16 300 ₽
+                        </p>
+                        <div class="item-section__info-item">
+                            <h2 class="item-section__info-item-heading">
+                                Блеск
+                            </h2>
+                            <div class="item-section__info-item-list">
+                                <a href="#" class="item-section__info-item-list-link active">
+                                    Матовая
+                                </a>
+                                <a href="#" class="item-section__info-item-list-link">
+                                    Глянцевая
+                                </a>
+                                <a href="#" class="item-section__info-item-list-link">
+                                    Полуглянцевая
+                                </a>
+                            </div>
+                        </div>
+                        <div class="item-section__info-item">
+                            <h2 class="item-section__info-item-heading">
+                                Фасовка
+                            </h2>
+                            <div class="item-section__info-item-list">
+                                <a href="#" class="item-section__info-item-list-link active">
+                                    2,4 кг
+                                </a>
+                                <a href="#" class="item-section__info-item-list-link">
+                                    8 кг
+                                </a>
+                                <a href="#" class="item-section__info-item-list-link">
+                                    20 кг
+                                </a>
+                            </div>
+                        </div>
+                        <a href="#" class="item-section__info-color-link">
+                            +200 цветов RAL
+                        </a>
                     </div>
                 </div>
             </section>
