--- a/catalog-item.html
+++ b/catalog-item.html
@@ -120,14 +120,13 @@
             <section class="navigation-section">
                 <div class="wrapper navigation-section__wrapper">
                     <div class="breadcrumbs">
-                        <a href="#" class="breadcrumbs__link">
+                        <a href="./index.html" class="breadcrumbs__link">
                             Главная
                         </a>
-                        <a href="#" class="breadcrumbs__link">
+                        <a href="./catalog.html" class="breadcrumbs__link">
                             Каталог
                         </a>
-                        <a href="#" class="breadcrumbs__link active">
-                            Грунт-эмаль полиуретановая «KOVALI®» 2К
+                        <a href="#" class="breadcrumbs__link breadcrumbs__link_active active">
                         </a>
                     </div>
                 </div>
@@ -136,127 +135,17 @@
                 <div class="wrapper item-section__wrapper">
 
                     <div class="item-section__content">
-                        <img src="./assets/img/item-img.jpg" alt="Грунт-эмаль полиуретановая «KOVALI®» 2К"
-                            class="item-section__content-img">
+                        <img src="" alt="Грунт-эмаль полиуретановая «KOVALI®» 2К" class="item-section__content-img">
                         <div class="item-section__text-content">
-                            <h2>
-                                описание
-                            </h2>
-                            <p>
-                                <a href="#">Грунт-эмаль полиуретановая «KOVALI®» 2К</a> предназначается для окраски
-                                и долговременной защиты не загрунтованных
-                                металлических конструкций в условиях промышленной атмосферы умеренно-холодного
-                                и холодного климата, в том числе
-                                подвергающихся повышенному истиранию. Применяется для защиты от коррозии стальных
-                                резервуаров, ёмкостей, трубопроводов
-                                для перевозки и хранения нефтепродуктов, индустриальных масел, опор ЛЭП, вышек сотовой
-                                связи, спецтехники: тракторов,
-                                кранов, бульдозеров, экскаваторов.
-                            </p>
-                            <h2>
-                                Характеристики
-                            </h2>
-                            <ul>
-                                <li>
-                                    Выдерживает перепад температур от — 60°C до+60°C
-                                </li>
-                                <li>
-                                    Время высыхания однослойного покрытия толщиной 25–35 мкм (по сухому слою)
-                                    при температуре (20±2)°С не более 4 часов,
-                                    а при температуре (80±2)°С не более 30 мин.
-                                </li>
-                                <li>
-                                    Окраска производится при температуре окружающей среды от +5°С до +35°С
-                                    и относительной влажности воздуха 80%.
-                                </li>
-                                <li>
-                                    Защищает от коррозии, влаги, паро — и воздухопроницаема, не выгорает, устойчива
-                                    к УФ.
-                                </li>
-                                <li>
-                                    Метод нанесения: кисть, валик, краскопульт
-                                </li>
-                                <li>
-                                    Теоретический расход на однослойное покрытие толщиной 25–35 мкм составит
-                                    80–100 г/м2 в зависимости от цвета.
-                                </li>
-                            </ul>
-                            <h2>
-                                Этапы окраски
-                            </h2>
-                            <ol>
-                                <li>
-                                    Подготовка поверхности: очистить от загрязнений, обезжирить растворителем KOVALI,
-                                    Р-4, Р-5 или ксилолом.
-                                </li>
-                                <li>
-                                    Компонент А тщательно перемешивают в течение 3-5 минут, затем вводят необходимое
-                                    количество компонента Б, перемешивают в
-                                    течение 2-3 минут, выдерживают 15-20 мин. При необходимости грунт-эмаль разбавляют
-                                    до рабочей вязкости растворителем
-                                    Р-5А или смесью ксилола и бутилацетата в соотношении 4:1. Грунт-эмаль после
-                                    разбавления вновь тщательно перемешивают и
-                                    фильтруют через сито или капроновую сетку с номинальным размером отверстий 100-200
-                                    мкм. Жизнеспособность грунт-эмали
-                                    после смешения компонентов при температуре (20±2)°С составляет не менее 5 часов.
-                                </li>
-                                <li>
-                                    Сварные швы, торцевые кромки, труднодоступных места, необходимо обработать
-                                    «полосовым слоем» кистью. При ручном
-                                    нанесении использовать кисти из натуральных волокон и безворсовые валики.
-                                </li>
-                                <li>
-                                    При перерывах в работе грунт-эмаль должна хранится в плотно закрытой таре, перед
-                                    началом работ снова тщательно
-                                    перемешать и выдержать 5-7 мин.
-                                </li>
-                                <li>
-                                    Окраска производится при температуре окружающей среды +5°С до +35°С и относительной
-                                    влажности воздуха &#60;80%. (Во время осадков, а также при сильном ветре
-                                    окрашивание
-                                    запрещено)</li>
-                            </ol>
                         </div>
                     </div>
                     <div class="item-section__info">
-                        <img src="./assets/img/item-img.jpg" alt="" class="item-section__info-img">
+                        <img src="" alt="" class="item-section__info-img">
                         <h1 class="item-section__info-heading">
-                            Грунт-эмаль полиуретановая «KOVALI®» 2К
                         </h1>
                         <p class="item-section__price">
-                            16 300 ₽
                         </p>
-                        <div class="item-section__info-item">
-                            <h2 class="item-section__info-item-heading">
-                                Блеск
-                            </h2>
-                            <div class="item-section__info-item-list">
-                                <a href="#" class="item-section__info-item-list-link active">
-                                    Матовая
-                                </a>
-                                <a href="#" class="item-section__info-item-list-link">
-                                    Глянцевая
-                                </a>
-                                <a href="#" class="item-section__info-item-list-link">
-                                    Полуглянцевая
-                                </a>
-                            </div>
-                        </div>
-                        <div class="item-section__info-item">
-                            <h2 class="item-section__info-item-heading">
-                                Фасовка
-                            </h2>
-                            <div class="item-section__info-item-list">
-                                <a href="#" class="item-section__info-item-list-link active">
-                                    2,4 кг
-                                </a>
-                                <a href="#" class="item-section__info-item-list-link">
-                                    8 кг
-                                </a>
-                                <a href="#" class="item-section__info-item-list-link">
-                                    20 кг
-                                </a>
-                            </div>
+                        <div class="item-section__info-list">
                         </div>
                         <a href="#" class="item-section__info-color-link">
                             +200 цветов RAL
@@ -397,20 +286,8 @@
             </div>
         </footer>
     </div>
-    <script>
-        const headerBurgerBtnEl = document.querySelector('.header__burger-btn');
-        const mobileMenuEl = document.querySelector('.mobile-menu');
-
-        headerBurgerBtnEl.addEventListener('click', () => {
-            if (mobileMenuEl.classList.contains('active')) {
-                mobileMenuEl.classList.remove('active');
-                document.body.classList.remove('no-scroll')
-            } else {
-                mobileMenuEl.classList.add('active');
-                document.body.classList.add('no-scroll')
-            }
-        })
-    </script>
+    <script src="./scripts/burger-menu.js"></script>
+    <script type="module" src="./scripts/catalog-item.js"></script>
 </body>
 
 </html>
