--- a/index.html
+++ b/index.html
@@ -532,76 +532,10 @@
             </div>
         </footer>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-
-        const headerBurgerBtnEl = document.querySelector('.header__burger-btn');
-        const mobileMenuEl = document.querySelector('.mobile-menu');
-
-        headerBurgerBtnEl.addEventListener('click', () => {
-            if (mobileMenuEl.classList.contains('active')) {
-                mobileMenuEl.classList.remove('active');
-                document.body.classList.remove('no-scroll')
-            } else {
-                mobileMenuEl.classList.add('active');
-                document.body.classList.add('no-scroll')
-            }
-        })
-
-
-        const aboutMessageEls = document.querySelectorAll('.about-section__overlay-message');
-
-        const tabsWrapperEl = document.querySelector('.projects-section__tabs')
-        const tabEls = tabsWrapperEl.querySelectorAll('.projects-section__tab')
-
-
-        aboutMessageEls.forEach(m => {
-            m.addEventListener('mouseenter', () => {
-                aboutMessageEls.forEach(m => m.classList.add('hidden'))
-                m.classList.remove('hidden')
-            })
-            m.addEventListener('mouseleave', () => {
-                aboutMessageEls.forEach(m => m.classList.remove('hidden'))
-            })
-        })
-
-
-
-
-        const projectSectionSwiper = new Swiper('.projects-section__swiper', {
-            slidesPerView: 1,
-            effect: 'fade',
-            navigation: {
-                prevEl: '.projects-section__swiper-nav-btn_left',
-                nextEl: '.projects-section__swiper-nav-btn_right',
-            },
-            pagination: {
-                el: '.projects-section__swiper-pagination',
-            },
-            on: {
-                slideChange: (e) => {
-                    const activeIdx = e.activeIndex;
-                    tabEls.forEach(t => t.classList.remove('active'))
-                    tabEls[activeIdx].classList.add('active')
-                }
-            }
-        })
-        const animEls = document.querySelectorAll(".anim-on-view")
-
-        const callback = (entries, observer) => {
-            entries.forEach((entry) => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add("view")
-                }
-            })
-        }
-        const myObserver = new IntersectionObserver(callback)
-        if (window.innerWidth <= 1024) {
-            animEls.forEach(card => myObserver.observe(card))
-        }
-
-
-    </script>
+    <script src="./scripts/burger-menu.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
